// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CircuitBreaker > close() > should emit half-open event 1`] = `
[
  {
    "failures": 3,
    "from": "open",
    "name": "test-breaker",
    "timestamp": 1000000,
    "to": "half-open",
  },
]
`;

exports[`CircuitBreaker > close() > should work in cycle: open() -> close() -> probe success -> closed 1`] = `
[
  "closed->open",
  "open->half-open",
  "half-open->closed",
]
`;

exports[`CircuitBreaker > edge cases > should handle rapid transitions: closed -> open -> half-open -> closed 1`] = `
[
  "closed->open",
  "open->half-open",
  "half-open->closed",
]
`;

exports[`CircuitBreaker > events > should emit events with correct data on transitions 1`] = `
[
  {
    "failures": 3,
    "from": "closed",
    "name": "test-breaker",
    "timestamp": 1000000,
    "to": "open",
  },
  {
    "failures": 3,
    "from": "open",
    "name": "test-breaker",
    "timestamp": 1001000,
    "to": "half-open",
  },
  {
    "failures": 3,
    "from": "half-open",
    "name": "test-breaker",
    "timestamp": 1001000,
    "to": "closed",
  },
]
`;

exports[`CircuitBreaker > open state > should include debug info in CircuitOpenError 1`] = `
{
  "failures": 3,
  "name": "test-breaker",
  "state": "open",
}
`;

exports[`CircuitBreaker > open() > should emit open event 1`] = `
[
  {
    "failures": 0,
    "from": "closed",
    "name": "test-breaker",
    "timestamp": 1000000,
    "to": "open",
  },
]
`;

exports[`CircuitBreaker close() should emit half-open event 1`] = `
[
  {
    "failures": 3,
    "from": "open",
    "name": "test-breaker",
    "timestamp": 1000000,
    "to": "half-open",
  },
]
`;

exports[`CircuitBreaker close() should work in cycle: open() -> close() -> probe success -> closed 1`] = `
[
  "closed->open",
  "open->half-open",
  "half-open->closed",
]
`;

exports[`CircuitBreaker edge cases should handle rapid transitions: closed -> open -> half-open -> closed 1`] = `
[
  "closed->open",
  "open->half-open",
  "half-open->closed",
]
`;

exports[`CircuitBreaker events should emit events with correct data on transitions 1`] = `
[
  {
    "failures": 3,
    "from": "closed",
    "name": "test-breaker",
    "timestamp": 1000000,
    "to": "open",
  },
  {
    "failures": 3,
    "from": "open",
    "name": "test-breaker",
    "timestamp": 1001000,
    "to": "half-open",
  },
  {
    "failures": 3,
    "from": "half-open",
    "name": "test-breaker",
    "timestamp": 1001000,
    "to": "closed",
  },
]
`;

exports[`CircuitBreaker open state should include debug info in CircuitOpenError 1`] = `
{
  "failures": 3,
  "name": "test-breaker",
  "state": "open",
}
`;

exports[`CircuitBreaker open() should emit open event 1`] = `
[
  {
    "failures": 0,
    "from": "closed",
    "name": "test-breaker",
    "timestamp": 1000000,
    "to": "open",
  },
]
`;
